# Geospatial-Data-Analysis-with-GDAL-Rasterio-GeoPandas-and-Xarray

./: Geospatial_Analysis.ipynb  Patch 8.tif  example_raster.tif  pyproject.toml  python.ipynb  xarray_raster.tif
