[project]
name = "practtice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.1",
    "gdal!=3.11.1",
    "geopandas>=1.1.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "rasterio>=1.4.3",
    "rioxarray>=0.19.0",
    "shapely>=2.1.1",
    "xarray>=2025.6.1",
]

[tool.uv.sources]
gdal = [
  { index = "gdal-wheels" }
]

[[tool.uv.index]]
name = "gdal-wheels"
url = "https://gitlab.com/api/v4/projects/61637378/packages/pypi/simple"
explicit = true

[tool.uv.workspace]
members = [
    "practtice",
]
